# shared_bike_refactor

./: .gitignore  CMakeLists.txt  README.md  build.bat  configure.bat  vcpkg.json
client/: CMakeLists.txt
client/src/: backend_client.cpp  backend_client.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  session_model.hpp
client/src/views/: login_view.cpp  login_view.hpp  records_view.cpp  records_view.hpp  wallet_view.cpp  wallet_view.hpp
common/: CMakeLists.txt
common/include/bike/: errors.hpp  protocol.hpp
common/src/: protocol.cpp
common/tests/: test_protocol.cpp
docker/: Dockerfile.server  docker-compose.yml  server.toml
docker/mysql-init/: schema.sql
docs/superpowers/plans/: 2026-07-18-shared-bike-refactor.md
docs/superpowers/specs/: 2026-07-18-shared-bike-refactor-design.md
legacy/: BusinessProcessor.cpp  BusinessProcessor.h  DispatchMsgService.cpp  DispatchMsgService.h  NetworkInterface.cpp  NetworkInterface.h  Sqltables.h  bike.pb.cpp  bike.pb.h  configdef.h  cpp.hint  events_def.cpp  events_def.h  eventtype.cpp  eventtype.h  glo_def.h  iEeventHandler.h  ievent.cpp  ievent.h  iniconfig.cpp  iniconfig.h  logger.cpp  logger.h  main.cpp  shared_bike.sln  shared_bike.vcxproj  sqlConnection.cpp  sqlConnection.h  thread.h  thread_cond.cpp  thread_mutex.cpp  thread_pool.cpp  thread_pool.h  user_event_handler.cpp  user_event_handler.h  user_service.cpp  user_service.h
proto/: bike.proto
scripts/: deploy.sh
server/: CMakeLists.txt
server/include/server/: config.hpp  handlers.hpp  logging.hpp  router.hpp  server.hpp  session.hpp
server/include/server/cache/: redis_session_store.hpp
server/include/server/db/: mysql_account_repo.hpp  mysql_pool.hpp  mysql_user_repo.hpp
server/include/server/repo/: account_repo.hpp  in_memory.hpp  session_store.hpp  user_repo.hpp
server/src/: config.cpp  logging.cpp  main.cpp  router.cpp  server.cpp  session.cpp
server/src/cache/: redis_session_store.cpp
server/src/db/: mysql_account_repo.cpp  mysql_pool.cpp  mysql_user_repo.cpp
server/src/handlers/: account_balance.cpp  list_records.cpp  login.cpp  mobile_code.cpp  recharge.cpp
server/tests/: test_config.cpp  test_handlers.cpp
